[package]
name = "lnurl-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lnurl-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.16"
base64 = "=0.13.0"
bitcoin = { version = "0.29.2", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive"] }
lightning = "0.0.115"
lightning-invoice = { version = "0.23.0", features = ["serde"] }
lnurl-rs = { version = "=0.2.4", default-features = false }
nostr = { version = "=0.22.0-bitcoin-v0.29", default-features = false, features = ["nip47"] }
nostr-sdk = "=0.22.0-bitcoin-v0.29"
home = "0.5.4"
serde = "1.0"
serde_json = "1.0"
sled = "0.34.7"
tokio = { version = "1.26.0", features = ["full"] }
tonic_openssl_lnd = "0.2.0"
tower-http = { version = "0.4.0", features = ["cors"] }
ureq = { version = "2.5.0", features = ["json"] }
