[package]
name = "lnurl-server"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/benthecarman/lnurl-server"
homepage = "https://github.com/benthecarman/lnurl-server"
readme = "README.md"
description = "A simple LNURL server"

[[bin]]
name = "lnurl-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
bitcoin = { version = "0.32.7", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive", "env"] }
lightning-invoice = { version = "0.33.2", features = ["serde", "std"] }
lnurl-rs = { version = "0.9.0", default-features = false }
nostr = { version = "0.40.0", default-features = false, features = ["nip57"] }
nostr-sdk = "0.40.0"
home = "0.5.4"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0"
serde_json = "1.0"
sled = "0.34.7"
tokio = { version = "1.26.0", features = ["full"] }
fedimint-tonic-lnd = { git = "https://github.com/benthecarman/tonic_lnd.git", branch = "fedimint-update-protos", default-features = false, features = ["lightningrpc"] }
tower-http = { version = "0.4.0", features = ["cors"] }
hex = "0.4.3"
urlencoding = "2.1"
